hotfix: many distint mines in the flag table no longer stretches the canvas

--- a/css/mines.css
+++ b/css/mines.css
@@ -10,3 +10,7 @@
 .minetip {
   padding: 5px
 }
+
+.minefield {
+  height: 700px
+}
