--- a/docs/css/mines.css
+++ b/docs/css/mines.css
@@ -1,1 +1,1 @@
-.container{display:flex;flex-wrap:wrap;flex-direction:row;align-items:auto;align-content:start}.minetip{padding:5px}
+.container{display:flex;flex-wrap:wrap;flex-direction:row;align-items:auto;align-content:start}.minetip{padding:5px}.minefield{height:700px}
